--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-playwright==1.41.2
-agentql==0.1.0
-pydantic==2.6.1
-python-multipart==0.0.9
-typing-extensions==4.9.0
+fastapi==0.115.7
+uvicorn==0.34.0
+playwright==1.49.1
+agentql==1.9.2
+pydantic==2.10.4
+python-multipart
+typing-extensions
+python-dotenv
